plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id "io.sentry.jvm.gradle" version "5.12.2"
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'gntc-youth-be'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    cucumberVersion = '7.18.1'
    restAssuredVersion = '6.0.0'
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // database dependencies
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'

    // development dependencies
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // observability dependencies
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // security dependencies
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation platform("io.jsonwebtoken:jjwt-bom:0.13.0")
    implementation "io.jsonwebtoken:jjwt-api"
    runtimeOnly "io.jsonwebtoken:jjwt-impl"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson"

    // AWS S3
    implementation platform('software.amazon.awssdk:bom:2.31.9')
    implementation 'software.amazon.awssdk:s3'

    // test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'

    // Cucumber
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.3'
    testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
    testImplementation "io.cucumber:cucumber-junit-platform-engine:${cucumberVersion}"
    testImplementation "io.cucumber:cucumber-spring:${cucumberVersion}"

    // RestAssured
    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty "cucumber.junit-platform.naming-strategy", "long"
}

sentry {
    includeSourceContext = true
    org = "gntc-youth-it"
    projectName = "java-spring-boot"
    authToken = System.getenv("SENTRY_AUTH_TOKEN")
}